--- a/DepartmentManagement/Views/Division/Upsert.cshtml
+++ b/DepartmentManagement/Views/Division/Upsert.cshtml
@@ -7,7 +7,7 @@
     <div class="row p-3 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="Id" />
-        @if (Model != null)
+        @if (Model.Id != 0)
         {
             //edit
             title = "Edit";
@@ -32,7 +32,7 @@
             <div class="form-group row">
 
                 <div class="col-4 offset-4">
-                    @if (Model.Id == null)
+                    @if (Model.Id == 0)
                     {
                         <button type="submit" class="btn btn-primary form-control">Create</button>
                     }
