--- a/DepartmentManagement/Views/Home/Index.cshtml
+++ b/DepartmentManagement/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 <div class="card p-2">
     <a class="btn btn-outline-primary" asp-controller="division" asp-action="index">Division</a>
     <a class="btn btn-outline-primary" asp-controller="employee" asp-action="index">Employee</a>
+    <a class="btn btn-outline-primary" asp-controller="position" asp-action="index">Position</a>
 </div>
