--- a/DepartmentManagement/Views/Position/Upsert.cshtml
+++ b/DepartmentManagement/Views/Position/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee
+﻿@model Position
 
 @{
     var title = "Add";
@@ -21,11 +21,11 @@
 
             <div class="form-group row">
                 <div class="col-4">
-                    <label asp-for="FullName"></label>
+                    <label asp-for="Name"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="FullName" class="form-control" />
-                    <span asp-validation-for="FullName" class="text-danger"></span>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
 
