--- a/DepartmentManagement/Views/Department/Index.cshtml
+++ b/DepartmentManagement/Views/Department/Index.cshtml
@@ -1,9 +1,13 @@
-﻿@model IEnumerable<Division>
+﻿@model IEnumerable<Department>
 
 <br />
 <br />
 <div class="border p-4 bg-white">
     <div class="row">
+        <div class="col-9">
+            <h2 class="text-info"> Department </h2>
+        </div>
+
         <div class="col-3 text-right">
             <a asp-action="Upsert" class="btn btn-info form-control"> Add </a>
         </div>
@@ -14,7 +18,7 @@
             <table class="table table-striped border">
                 <tr class="table-secondary">
                     <th>
-                        Division
+                        Department
                     </th>
                     <th></th>
                 </tr>
