--- a/DepartmentManagement/Views/Home/Index.cshtml
+++ b/DepartmentManagement/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="card p-2">
+    <a class="btn btn-outline-primary" asp-controller="department" asp-action="index">Department</a>
     <a class="btn btn-outline-primary" asp-controller="division" asp-action="index">Division</a>
     <a class="btn btn-outline-primary" asp-controller="employee" asp-action="index">Employee</a>
     <a class="btn btn-outline-primary" asp-controller="position" asp-action="index">Position</a>
