--- a/DepartmentManagement/Views/Division/Index.cshtml
+++ b/DepartmentManagement/Views/Division/Index.cshtml
@@ -4,6 +4,10 @@
 <br />
 <div class="border p-4 bg-white">
     <div class="row">
+        <div class="col-9">
+            <h2 class="text-info"> Division </h2>
+        </div>
+
         <div class="col-3 text-right">
             <a asp-action="Upsert" class="btn btn-info form-control"> Add </a>
         </div>
@@ -11,33 +15,36 @@
     <div>
         @if (Model.Count() > 0)
         {
-            <table class="table table-striped border">
-                <tr class="table-secondary">
-                    <th>
-                        Division
-                    </th>
-                    <th></th>
-                </tr>
+            <div class="row pb-5">
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td>
-                            @item.Name
-                        </td>
-                        <td>
-                            <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Id">
-                                Edit
-                            </a>
-                            <a class="btn btn-primary text-white" asp-action="Details" asp-route-Id="@item.Id">
-                                Details
-                            </a>
-                            <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id">
-                                Delete
-                            </a>
-                        </td>
-                    </tr>
+                    <div class="col-lg-4 col-md-9 mb-4">
+                        <div class="card text-black-50">
+                            <div class="card-header">
+                                <p>@item.Name</p>
+                            </div>
+
+                            @*<img class="card-img-top" src="@item.ImageUrl" alt="Card image cap">*@
+
+                            <div class="card-body">
+                                Description or address
+                            </div>
+
+                            <div class="card-footer">
+                                <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Id">
+                                    Edit
+                                </a>
+                                <a class="btn btn-primary text-white" asp-action="Details" asp-route-Id="@item.Id">
+                                    Details
+                                </a>
+                                <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id">
+                                    Delete
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 }
-            </table>
+            </div>
         }
         else
         {
