--- a/DepartmentManagement/Views/Division/Upsert.cshtml
+++ b/DepartmentManagement/Views/Division/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@model Division
+﻿@model DivisionViewModel
 
 @{
     var title = "Add";
@@ -6,8 +6,9 @@
 <form method="post">
     <div class="row p-3 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="Id" />
-        @if (Model.Id != 0)
+        <input type="hidden" asp-for="Division.Id" />
+
+        @if (Model.Division != null)
         {
             //edit
             title = "Edit";
@@ -21,18 +22,29 @@
 
             <div class="form-group row">
                 <div class="col-4">
-                    <label asp-for="Name"></label>
+                    <label asp-for="Division.Name"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
+                    <input asp-for="Division.Name" class="form-control" />
+                    <span asp-validation-for="Division.Name" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Division.DepartmentId"></label>
+                </div>
+                <div class="col-8">
+                    @Html.DropDownListFor(u => u.Division.DepartmentId, Model.DepartmentList, "--Departments--",
+                        new { @class = "form-control" })
+                    <span asp-validation-for="Division.DepartmentId" class="text-danger"></span>
                 </div>
             </div>
 
             <div class="form-group row">
 
                 <div class="col-4 offset-4">
-                    @if (Model.Id == 0)
+                    @if (Model.Division == null)
                     {
                         <button type="submit" class="btn btn-primary form-control">Create</button>
                     }
