--- a/DepartmentManagement/Views/Department/Index.cshtml
+++ b/DepartmentManagement/Views/Department/Index.cshtml
@@ -16,7 +16,7 @@
         @if (Model.Count() > 0)
         {
             <div class="row pb-5">
-                @foreach (var item in Model)
+                @foreach (var item in Model.OrderByDescending(x => x.Id))
                 {
                     <div class="col-lg-4 col-md-9 mb-4">
                         <div class="card text-black-50">
