--- a/DepartmentManagement/Views/Employee/Upsert.cshtml
+++ b/DepartmentManagement/Views/Employee/Upsert.cshtml
@@ -3,55 +3,88 @@
 @{
     var title = "Add";
 }
-<form method="post">
-    <div class="row p-3 border">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="Id" />
-        @if (Model.Id != 0)
-        {
-            //edit
-            title = "Edit";
-        }
 
-        <div class="col-12 border-bottom">
-            <h2 class="text-primary">@title</h2>
-        </div>
+<div class="container">
+    <form method="post" enctype="multipart/form-data">
+        <div class="row p-2 border" style="margin-top:10%;">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-        <div class="col-8 pt-4">
+            @if (Model.Id != 0)
+            {
+                // Edit
+                title = "Edit";
+                <input type="hidden" asp-for="Id" />
+            }
 
-            <div class="form-group row">
-                <div class="col-4">
-                    <label asp-for="FullName"></label>
-                </div>
-                <div class="col-8">
-                    <input asp-for="FullName" class="form-control" />
-                    <span asp-validation-for="FullName" class="text-danger"></span>
-                </div>
+            <div class="col-12 border-bottom">
+                <h3>@title</h3>
             </div>
 
-            <div class="form-group row">
+            <div class="col-12 pt-4">
 
-                <div class="col-4 offset-4">
-                    @if (Model.Id == 0)
-                    {
-                        <button type="submit" class="btn btn-primary form-control">Create</button>
-                    }
-                    else
-                    {
-                        <button type="submit" class="btn btn-primary form-control">Update</button>
-                    }
+                @if (Model.Id != 0)
+                {
+                    <div class="form-group row p-2">
+                        <img src="@Model.ImageUrl" />
+                        <input hidden asp-for="ImageUrl" />
+                    </div>
+                }
+
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="FullName"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="FullName" class="form-control" />
+                        <span asp-validation-for="FullName" class="text-danger"></span>
+                    </div>
                 </div>
 
-                <div class="col-4">
-                    <a asp-action="Index" class="btn btn-success form-control">Back to List</a>
+                <div class="form-group row">
+                    <div class="col-4">
+                        Image
+                    </div>
+                    <div class="col-8">
+                        <input type="file" name="files" id="uploadBox" multiple class="form-control" />
+                    </div>
                 </div>
 
+                <div class="form-group row">
+                    <div class="col-8 offset-4">
+                        @if (Model.Id != 0)
+                        {
+                            <button type="submit" class="btn btn-primary form-control">Edit</button>
+                        }
+                        else
+                        {
+                            <div class="row">
+                                <div class="col">
+                                    <button type="submit" onclick="return validateInput()" class="btn btn-sm btn-outline-success form-control">Add</button>
+                                </div>
+                                <div class="col">
+                                    <a asp-action="Index" class="btn btn-sm btn-outline-primary form-control text-center">Back</a>
+                                </div>
+                            </div>
+                        }
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</form>
+    </form>
+</div>
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
 
+    <script>
+
+        function validateInput() {
+            if (document.getElementById("uploadBox").value == "") {
+                swal("Error", "Please select an image", "error");
+                return false;
+            }
+            return true;
+        }
+
+    </script>
 }
