Fix Employee Details View 06/02/2021

--- a/DepartmentManagement/Views/Employee/Details.cshtml
+++ b/DepartmentManagement/Views/Employee/Details.cshtml
@@ -3,6 +3,7 @@
 <div class="container">
 
     <div class="card">
+        <img class="card-img-top" src="@Model.Employee.ImageUrl" alt="Card image cap">
         <div class="card-header">
             @Model.Employee.FullName
         </div>
