--- a/DepartmentManagement/Views/Employee/Index.cshtml
+++ b/DepartmentManagement/Views/Employee/Index.cshtml
@@ -25,7 +25,7 @@
                                 <p>@item.FullName</p>
                             </div>
 
-                            @*<img class="card-img-top" src="@item.ImageUrl" alt="Card image cap">*@
+                            <img class="card-img-top" src="@item.ImageUrl" alt="Card image cap">
 
                             <div class="card-body">
                                 Description or address
