--- a/DepartmentManagement/Views/Division/Index.cshtml
+++ b/DepartmentManagement/Views/Division/Index.cshtml
@@ -22,7 +22,7 @@
                         <div class="card text-black-50">
 
                             <div class="card-header">
-                                @if (item.Department.Name != null)
+                                @if (item.Department != null)
                                 {
                                     <h5>@item.Department.Name</h5>
                                 }
