--- a/DepartmentManagement/Views/Employee/Index.cshtml
+++ b/DepartmentManagement/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Employee>
+﻿@model IEnumerable<DivisionEmployee>
 
 <br />
 <br />
@@ -16,29 +16,34 @@
         @if (Model.Count() > 0)
         {
             <div class="row pb-5">
-                @foreach (var item in Model.OrderByDescending(x => x.Id))
+                @foreach (var item in Model.OrderByDescending(x => x.Employee_Id))
                 {
                     <div class="col-lg-4 col-md-9 mb-4">
                         <div class="card text-black-50">
 
                             <div class="card-header">
-                                <p>@item.FullName</p>
+                                <h5>
+                                    @item.Division.Name
+                                </h5>
+                                <p>
+                                    @item.Employee.FullName
+                                </p>
                             </div>
 
-                            <img class="card-img-top" src="@item.ImageUrl" alt="Card image cap">
+                            <img class="card-img-top" src="@item.Employee.ImageUrl" alt="Card image cap">
 
                             <div class="card-body">
                                 Description or address
                             </div>
 
                             <div class="card-footer">
-                                <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Id">
+                                <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Employee.Id">
                                     Edit
                                 </a>
-                                <a class="btn btn-primary text-white" asp-action="Details" asp-route-Id="@item.Id">
+                                <a class="btn btn-primary text-white" asp-action="Details" asp-route-Id="@item.Employee.Id">
                                     Details
                                 </a>
-                                <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id">
+                                <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Employee.Id">
                                     Delete
                                 </a>
                             </div>
