--- a/DepartmentManagement/Views/Department/Details.cshtml
+++ b/DepartmentManagement/Views/Department/Details.cshtml
@@ -7,6 +7,20 @@
             @Model.Name
         </div>
         <div class="card-body">
+            <div>
+                <h5>
+                    @Model.City
+                </h5>
+                <h5>
+                    @Model.Address
+                </h5>
+                <h5>
+                    @Model.MainPhone
+                </h5>
+                <h5>
+                    @Model.BIN
+                </h5>
+            </div>
             @if (Model.Divisions != null)
             {
                 <div class="card-body">
