--- a/DepartmentManagement/Views/Employee/Index.cshtml
+++ b/DepartmentManagement/Views/Employee/Index.cshtml
@@ -26,7 +26,7 @@
                                     @item.Division.Name
                                 </h5>
                                 <p>
-                                    @item.Employee.FullName
+                                    @item.Employee.FirstName @item.Employee.LastName
                                 </p>
                             </div>
 
