--- a/DepartmentManagement/Views/Department/Upsert.cshtml
+++ b/DepartmentManagement/Views/Department/Upsert.cshtml
@@ -30,6 +30,46 @@
             </div>
 
             <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="City"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="City" class="form-control" />
+                    <span asp-validation-for="City" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Address"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Address" class="form-control" />
+                    <span asp-validation-for="Address" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="MainPhone"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="MainPhone" class="form-control" />
+                    <span asp-validation-for="MainPhone" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="BIN"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="BIN" class="form-control" />
+                    <span asp-validation-for="BIN" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row">
 
                 <div class="col-4 offset-4">
                     @if (Model.Id == 0)
