--- a/DepartmentManagement/Views/Division/Details.cshtml
+++ b/DepartmentManagement/Views/Division/Details.cshtml
@@ -16,6 +16,9 @@
             <p>
                 @Model.Division.Name
             </p>
+            <p>
+                @Model.Division.CabinetNumber
+            </p>
         </div>
         <div class="card-body">
             @if (Model.DivisionEmployeeList != null)
@@ -26,7 +29,7 @@
                         <p>
                             <span class="badge badge-warning">
                                 <a asp-controller="employee" asp-action="details" asp-route-Id="@emp.Employee.Id">
-                                    @emp.Employee.FullName /
+                                    @emp.Employee.FirstName / @emp.Employee.LastName
 
                                     @foreach (var position in Model.EmployeePositionList)
                                     {
