--- a/DepartmentManagement/Views/Division/ManageEmployees.cshtml
+++ b/DepartmentManagement/Views/Division/ManageEmployees.cshtml
@@ -15,7 +15,7 @@
                     <input type="text" asp-for="Division.Name" class="form-control" disabled />
                 </div>
                 <div class="col-4 pt-3">
-                    <label asp-for="DivisionEmployees.Employee.FullName"></label>
+                    <label asp-for="DivisionEmployees.Employee.FirstName"></label>
                 </div>
                 <div class="col-8">
                     @Html.DropDownListFor(u => u.DivisionEmployees.Employee_Id, Model.DivisionEmployeeListDropDown, "--Select Employees--",
@@ -43,7 +43,7 @@
                 {
 
                     <div class="row pb-2">
-                        <div class="col-8 text-right" style="font-size:23px;">@item.Employee.FullName</div>
+                        <div class="col-8 text-right" style="font-size:23px;">@item.Employee.FirstName @item.Employee.LastName</div>
                         <div class="col-4">
                             <button asp-action="RemoveEmployees" type="submit" class="btn btn-danger form-control" asp-route-id="@item.Employee_Id">Remove</button>
                         </div>
