--- a/DepartmentManagement/Views/Division/Upsert.cshtml
+++ b/DepartmentManagement/Views/Division/Upsert.cshtml
@@ -32,6 +32,16 @@
 
             <div class="form-group row">
                 <div class="col-4">
+                    <label asp-for="Division.CabinetNumber"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Division.CabinetNumber" class="form-control" />
+                    <span asp-validation-for="Division.CabinetNumber" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-4">
                     <label asp-for="Division.DepartmentId"></label>
                 </div>
                 <div class="col-8">
