--- a/DepartmentManagement/Views/Employee/ManagePositions.cshtml
+++ b/DepartmentManagement/Views/Employee/ManagePositions.cshtml
@@ -9,10 +9,10 @@
                 <input type="hidden" asp-for="EmployeePositions.Employee_Id" />
 
                 <div class="col-4">
-                    <label asp-for="Employee.FullName"></label>
+                    <label asp-for="Employee.FirstName"></label>
                 </div>
                 <div class="col-8">
-                    <input type="text" asp-for="Employee.FullName" class="form-control" disabled />
+                    <input type="text" asp-for="Employee.FirstName" class="form-control" disabled />
                 </div>
                 <div class="col-4 pt-3">
                     <label asp-for="EmployeePositions.Position.Name"></label>
