--- a/DepartmentManagement/Views/Employee/AllEmployees.cshtml
+++ b/DepartmentManagement/Views/Employee/AllEmployees.cshtml
@@ -1,50 +1,44 @@
-﻿@model IEnumerable<DivisionEmployee>
+﻿@model IEnumerable<Employee>
 
-<br />
-<br />
 <div class="border p-4 bg-white">
     <div class="row">
         <div class="col-9">
-            <h2 class="text-info"> Division Employees </h2>
+            <h2 class="text-info">All Employees List</h2>
         </div>
 
-        <div class="col-3 text-right btn-block">
+        <div class="col-3 text-right">
             <a asp-action="Upsert" class="btn btn-info form-control"> Add </a>
-            <a asp-action="AllEmployees" class="btn btn-success form-control"> All employees list </a>           
         </div>
     </div>
     <div>
         @if (Model.Count() > 0)
         {
             <div class="row pb-5">
-                @foreach (var item in Model.OrderByDescending(x => x.Employee_Id))
+                @foreach (var item in Model.OrderByDescending(x => x.Id))
                 {
                     <div class="col-lg-4 col-md-9 mb-4">
                         <div class="card text-black-50">
 
                             <div class="card-header">
-                                <h5>
-                                    @item.Division.Name
-                                </h5>
                                 <p>
-                                    @item.Employee.FirstName @item.Employee.LastName
+                                    @item.FirstName @item.LastName
                                 </p>
                             </div>
 
-                            <img class="card-img-top" src="@item.Employee.ImageUrl" alt="Card image cap">
+                            <img class="card-img-top" src="@item.ImageUrl" alt="Card image cap">
 
                             <div class="card-body">
                                 Description or address
                             </div>
 
                             <div class="card-footer">
-                                <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Employee.Id">
+                                <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Id">
                                     Edit
                                 </a>
-                                <a class="btn btn-primary text-white" asp-action="Details" asp-route-Id="@item.Employee.Id">
+                                <a class="btn btn-primary text-white" asp-action="Details" asp-route-Id="@item.Id">
                                     Details
                                 </a>
-                                <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Employee.Id">
+                                <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id">
                                     Delete
                                 </a>
                             </div>
