--- a/DepartmentManagement/Views/Department/Index.cshtml
+++ b/DepartmentManagement/Views/Department/Index.cshtml
@@ -32,15 +32,21 @@
                             </div>
 
                             <div class="card-footer">
-                                <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Id">
-                                    Edit
-                                </a>
+
+                                @if (User.IsInRole(Common.AdminRole))
+                                {
+                                    <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Id">
+                                        Edit
+                                    </a>
+                                    <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id">
+                                        Delete
+                                    </a>
+                                }
+
                                 <a class="btn btn-primary text-white" asp-action="Details" asp-route-Id="@item.Id">
                                     Details
                                 </a>
-                                <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id">
-                                    Delete
-                                </a>
+
                             </div>
 
                         </div>
