--- a/DepartmentManagement/Views/Division/Index.cshtml
+++ b/DepartmentManagement/Views/Division/Index.cshtml
@@ -7,10 +7,12 @@
         <div class="col-9">
             <h2 class="text-info"> Division </h2>
         </div>
-
-        <div class="col-3 text-right">
-            <a asp-action="Upsert" class="btn btn-info form-control"> Add </a>
-        </div>
+        @if (User.IsInRole(Common.AdminRole))
+        {
+            <div class="col-3 text-right">
+                <a asp-action="Upsert" class="btn btn-info form-control"> Add </a>
+            </div>
+        }
     </div>
     <div>
         @if (Model.Count() > 0)
@@ -36,15 +38,21 @@
                             </div>
 
                             <div class="card-footer">
-                                <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Id">
-                                    Edit
-                                </a>
+
+                                @if (User.IsInRole(Common.AdminRole))
+                                {
+                                    <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Id">
+                                        Edit
+                                    </a>
+                                    <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id">
+                                        Delete
+                                    </a>
+                                }
+
                                 <a class="btn btn-primary text-white" asp-action="Details" asp-route-Id="@item.Id">
                                     Details
                                 </a>
-                                <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id">
-                                    Delete
-                                </a>
+
                             </div>
 
                         </div>
