--- a/DepartmentManagement/Views/Home/Index.cshtml
+++ b/DepartmentManagement/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<Department>
 
+
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -35,9 +36,12 @@
     }
 </div>
 
-<div class="card p-2">
-    <a class="btn btn-outline-primary" asp-controller="department" asp-action="index">Department</a>
-    <a class="btn btn-outline-primary" asp-controller="division" asp-action="index">Division</a>
-    <a class="btn btn-outline-primary" asp-controller="employee" asp-action="index">Employee</a>
-    <a class="btn btn-outline-primary" asp-controller="position" asp-action="index">Position</a>
-</div>
+@if (User.IsInRole(Common.AdminRole))
+{
+    <div class="card p-2">
+        <a class="btn btn-outline-primary" asp-controller="department" asp-action="index">Department</a>
+        <a class="btn btn-outline-primary" asp-controller="division" asp-action="index">Division</a>
+        <a class="btn btn-outline-primary" asp-controller="employee" asp-action="index">Employee</a>
+        <a class="btn btn-outline-primary" asp-controller="position" asp-action="index">Position</a>
+    </div>
+}
