--- a/DepartmentManagement/Views/Shared/_Layout.cshtml
+++ b/DepartmentManagement/Views/Shared/_Layout.cshtml
@@ -22,7 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Division" asp-action="Index">Divisions</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="AllEmployees">All employee</a>
                         </li>
                     </ul>
                 </div>
