--- a/DepartmentManagement/Views/_ViewImports.cshtml
+++ b/DepartmentManagement/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using DepartmentManagement
 @using Models
 @using Models.ViewModels
+@using DepartmentManagement.Common
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
