--- a/DepartmentManagement/Views/Department/Index.cshtml
+++ b/DepartmentManagement/Views/Department/Index.cshtml
@@ -28,7 +28,12 @@
                             @*<img class="card-img-top" src="@item.ImageUrl" alt="Card image cap">*@
 
                             <div class="card-body">
-                                Description or address
+                                <h5>
+                                    @item.City
+                                </h5>
+                                <p>
+                                    @item.Address
+                                </p>
                             </div>
 
                             <div class="card-footer">
