--- a/DepartmentManagement/Views/Employee/AllEmployees.cshtml
+++ b/DepartmentManagement/Views/Employee/AllEmployees.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<Employee>
 
+<br />
+<br />
 <div class="border p-4 bg-white">
     <div class="row">
         <div class="col-9">
@@ -34,15 +36,21 @@
                             </div>
 
                             <div class="card-footer">
-                                <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Id">
-                                    Edit
-                                </a>
+
+                                @if (User.IsInRole(Common.AdminRole))
+                                {
+                                    <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Id">
+                                        Edit
+                                    </a>
+                                    <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id">
+                                        Delete
+                                    </a>
+                                }
+
                                 <a class="btn btn-primary text-white" asp-action="Details" asp-route-Id="@item.Id">
                                     Details
                                 </a>
-                                <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id">
-                                    Delete
-                                </a>
+
                             </div>
 
                         </div>
