--- a/DepartmentManagement/Views/Employee/Details.cshtml
+++ b/DepartmentManagement/Views/Employee/Details.cshtml
@@ -1,5 +1,8 @@
 ﻿@model EmployeePositionViewModel
 
+
+<br />
+<br />
 <div class="container">
 
     <div class="card">
@@ -36,9 +39,12 @@
         }
     </div>
 
-    <a class="btn btn-primary text-white" asp-action="managepositions" asp-route-Id="@Model.Employee.Id">
-        Position
-    </a>
+    @if (User.IsInRole(Common.AdminRole))
+    {
+        <a class="btn btn-primary text-white" asp-action="managepositions" asp-route-Id="@Model.Employee.Id">
+            Position
+        </a>
+    }
 
     <a asp-action="Index" class="btn btn-primary">
         Back
